  meson_conj_exD1 ~> Meson.conj_exD1
  meson_conj_exD2 ~> Meson.conj_exD2
  meson_disj_exD ~> Meson.disj_exD
  meson_disj_exD1 ~> Meson.disj_exD1
  meson_disj_exD2 ~> Meson.disj_exD2
  meson_disj_assoc ~> Meson.disj_assoc
  meson_disj_comm ~> Meson.disj_comm
  meson_disj_FalseD1 ~> Meson.disj_FalseD1
  meson_disj_FalseD2 ~> Meson.disj_FalseD2
INCOMPATIBILITY.

* Sledgehammer:
  - Renamed lemmas:
    COMBI_def ~> Meson.COMBI_def
    COMBK_def ~> Meson.COMBK_def
    COMBB_def ~> Meson.COMBB_def
    COMBC_def ~> Meson.COMBC_def
    COMBS_def ~> Meson.COMBS_def
    abs_I ~> Meson.abs_I
    abs_K ~> Meson.abs_K
    abs_B ~> Meson.abs_B
    abs_C ~> Meson.abs_C
    abs_S ~> Meson.abs_S
    INCOMPATIBILITY.
  - Renamed commands:
    sledgehammer atp_info ~> sledgehammer running_provers
    sledgehammer atp_kill ~> sledgehammer kill_provers
    sledgehammer available_atps ~> sledgehammer available_provers
    INCOMPATIBILITY.
  - Renamed options:
    sledgehammer [atps = ...] ~> sledgehammer [provers = ...]
    sledgehammer [atp = ...] ~> sledgehammer [prover = ...]
    INCOMPATIBILITY.


*** FOL ***

* All constant names are now qualified.  INCOMPATIBILITY.


*** ZF ***

* All constant names are now qualified.  INCOMPATIBILITY.


*** ML ***

* Renamed setmp_noncritical to Unsynchronized.setmp to emphasize its
meaning.

* Renamed structure PureThy to Pure_Thy and moved most of its
operations to structure Global_Theory, to emphasize that this is
rarely-used global-only stuff.

* Discontinued Output.debug.  Minor INCOMPATIBILITY, use plain writeln
instead (or tracing for high-volume output).

* Configuration option show_question_marks only affects regular pretty
printing of types and terms, not raw Term.string_of_vname.

* ML_Context.thm and ML_Context.thms are no longer pervasive.  Rare
INCOMPATIBILITY, superseded by static antiquotations @{thm} and
@{thms} for most purposes.

* ML structure Unsynchronized never opened, not even in Isar