@@ -9,7 +9,7 @@ imports Pure
 uses
   "~~/src/Tools/cache_io.ML"
   "~~/src/Tools/auto_tools.ML"
-  "~~/src/Tools/auto_solve.ML"
+  "~~/src/Tools/solve_direct.ML"
   "~~/src/Tools/quickcheck.ML"
   "~~/src/Tools/value.ML"
   "~~/src/Tools/Code/code_preproc.ML" 
@@ -26,7 +26,7 @@ uses
 begin
 
 setup {*
-  Auto_Solve.setup
+  Solve_Direct.setup
   #> Code_Preproc.setup
   #> Code_Simp.setup
   #> Code_ML.setup
